<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/search_label"
            android:text="@string/search_label_date" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/date_start_error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/date_start_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:textSize="@dimen/search_activity_text_normal" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/search_label"
            android:text="@string/search_label_price" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/price_error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="@dimen/search_activity_text_normal" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/search_label"
            android:text="@string/search_label_persons" />

        <Spinner
            android:id="@+id/person_count_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown" />

        <View
            style="@style/separator_style"
            android:layout_marginBottom="16dp" />

        <TextView
            style="@style/search_label"
            android:text="@string/search_label_meals" />

        <Spinner
            android:id="@+id/meal_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown" />

        <View style="@style/separator_style" />

        <TextView
            style="@style/search_label"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_label_climate" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/check_box_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                style="@style/search_activity_check_box"
                android:layout_width="@dimen/search_activity_check_box_width"
                android:text="@string/placeholder_checkbox"
                app:layout_column="0"
                app:layout_row="0" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="1"
                app:layout_row="0" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="0"
                app:layout_row="1" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="1"
                app:layout_row="1" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="0"
                app:layout_row="2" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="1"
                app:layout_row="2" />

            <CheckBox
                style="@style/search_activity_check_box"
                android:text="@string/placeholder_checkbox"
                app:layout_column="0"
                app:layout_row="3" />

        </android.support.v7.widget.GridLayout>

        <View
            style="@style/separator_style"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/search_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/search_button" />

    </LinearLayout>

</ScrollView>


